--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -37,6 +37,10 @@
     color: rgb(117, 117, 117);
    }
 
+   .text-center{
+    text-align: center;
+   }
+
    /* header styles */
    .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
@@ -101,13 +105,18 @@ main{
     max-width: 1140px;
     margin: 0 auto ;
 }
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* about styles */
 
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 }
 .item-description{
     font-weight: 700;
@@ -116,4 +125,17 @@ main{
 .about-items{
     display: flex;
     justify-content: space-around;
+}
+
+  /* skills section styles */
+  .skill-container{
+    display: flex;
+    gap: 24px ;
+  }
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
 }
