--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -109,6 +109,7 @@ main{
 main section{
     margin-top: 130px;
     margin-bottom: 130px;
+    
 }
 /* about styles */
 
@@ -138,4 +139,29 @@ main section{
     border-radius: 5px;
    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 
+}
+
+/* resume section styles */
+
+.resume-container{
+    display: flex;
+    gap: 24px;
+
+}
+.experience-description{
+    font-size: 16px;
+    color: rgb(117, 117, 117);
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    color: rgb(117, 117, 117);
+}
+.experience-title{
+    font-size: 25px;
+    color: rgb(71, 71, 71);
+}
+
+.resume-dowonlod-cv{
+    margin-top: 50px;
 }
